--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
               <h4>Internal Radio System</h4>
               <p>Solo Project</p>
               <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Solo"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="Radio-portfolio.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
