--- a/Learning-portfoloio.html
+++ b/Learning-portfoloio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CyberNest: Internal Radio System</title>
+  <title>CyberNest: Learning Material Implementation</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -58,9 +58,9 @@
 
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Internal Radio System</li>
+          <li>Learning Material Implementation</li>
         </ol>
-        <h2>Internal Radio System</h2>
+        <h2>Learning Material Implementation</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -98,13 +98,13 @@
               <ul>
                 <li><strong>Category</strong>: Solo Projects</li>
                 <li><strong>Client</strong>: Ethos International College</li>
-                <li><strong>Project date</strong>: N / A</li>
+                <li><strong>Project date</strong>: 2nd September 2022</li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Extra Information</h2>
               <p>
-                The Internal Radio System is a project that aims to create a musical atmosphere at Ethos International College
+                This project aims to enhance children's computer skills while providing them with diverse learning materials to excel academically.
               </p>
             </div>
           </div>
