--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <ul class="faq-list">
 
           <li>
-            <div data-bs-toggle="collapse" class="collapsed question">Who can join CyberNest? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq1" class="collapsed question">Who can join CyberNest? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
                 CyberNest is open to all students who have an interest in technology, regardless of their level of expertise or background.
@@ -368,7 +368,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" class="collapsed question">What activities does CyberNest organize? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">What activities does CyberNest organize? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
                 CyberNest organizes workshops, hackathons, coding competitions, and guest speaker sessions to enhance members' skills and knowledge in various tech-related fields.
@@ -377,7 +377,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" class="collapsed question">How can joining CyberNest benefit me? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">How can joining CyberNest benefit me? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Joining CyberNest provides access to resources, networking opportunities, and hands-on experience with cutting-edge technologies, preparing members for future careers in tech.
@@ -386,7 +386,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" class="collapsed question">Does CyberNest provide any resources or support for student projects? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Does CyberNest provide any resources or support for student projects? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Yes, CyberNest offers resources such as access to equipment, software, and mentorship to support student-driven projects and initiatives.
@@ -395,7 +395,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" class="collapsed question">Are there leadership opportunities within CyberNest? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Are there leadership opportunities within CyberNest? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Yes, CyberNest offers leadership roles such as project managers, event coordinators, and club executives, providing opportunities for members to develop leadership skills.
