Fixing the Blog and redirecting users to the form instead of payment

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <li class="na">Get Access to Exclusive Services</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#pricing" class="btn-buy">Buy Now</a>
+                <a href="Pricing.html" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
@@ -317,7 +317,7 @@
                 <li>Get access to Premium Programmes</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="Pricing.html" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
@@ -336,7 +336,7 @@
                 <li>Get access to Premium Ts</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="Pricing.html" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
