--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <h3>Welcome to <strong>CyberNest</strong></h3>
       <h1>We're A Tech Club</h1>
       <h2>We are team of talented students from Ethos International College</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <a href="#pricing" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
 
@@ -284,48 +284,11 @@
         </div>
 
         <div class="row">
-
-          <div class="col-lg-4 col-md-6">
-            <div class="box">
-              <h3>Prospect</h3>
-              <h4><sup>Rs</sup>0<span> / year</span></h4>
-              <ul>
-                <li>Attend scheduled meetings</li>
-                <li>Take Part in events</li>
-                <li class="na">Get access to exclusive content</li>
-                <li>Access to Services</li>
-                <li class="na">Get Access to Exclusive Services</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="Pricing.html" class="btn-buy">Buy Now</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
-            <div class="box recommended">
-              <span class="recommended-badge">Recommended</span>
-              <h3>Programming Members</h3>
-              <h4><sup>Rs</sup>1800<span> / year</span></h4>
-              <ul>
-                <li>Attend scheduled meetings</li>
-                <li>Take Part in events</li>
-                <li>Get access to exclusive content</li>
-                <li>Access to Services</li>
-                <li>Get Access to Exclusive Services</li>
-                <li>Get access to Premium Programmes</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="Pricing.html" class="btn-buy">Buy Now</a>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box recommended">
               <span class="recommended-badge">Recommended</span>
-              <h3>Designing Members</h3>
-              <h4><sup>Rs</sup>1800<span> / year</span></h4>
+              <h3>Member</h3>
+              <h4><sup>Rs</sup>1200<span> / year</span></h4>
               <ul>
                 <li>Attend scheduled meetings</li>
                 <li>Take Part in events</li>
