--- a/Learning-portfoloio.html
+++ b/Learning-portfoloio.html
@@ -42,7 +42,7 @@
           <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
           <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
-          <li><a href="">Learning Material (N/A)</a></li>
+          <li><a href="">Student Articles (N/A)</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
