--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Projects</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a href="">Learning Material (N/A)</a></li>
+          <li><a href="">Student Articles (N/A)</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -243,7 +243,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Learning Materials</h4>
+              <h4>Student Article</h4>
               <p>Solo Project</p>
               <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Solo"><i class="bx bx-plus"></i></a>
               <a href="Learning-portfoloio.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
